...

    let alertController = UIAlertController(title: nil, message: nil, preferredStyle: .actionSheet)

    if let action = self.action(for: .camera, title: "Take photo") {
      alertController.addAction(action)
    }
    if let action = self.action(for: .savedPhotosAlbum, title: "Camera roll") {
      alertController.addAction(action)
    }
    if let action = self.action(for: .photoLibrary, title: "Photo library") {
      alertController.addAction(action)
    }

...
