...
  // MARK: View lifecycle
  
  override func viewDidLoad() {
    super.viewDidLoad()
    shouldHideKeyboardWhenTappedAnyArea()
    navigationItem.leftBarButtonItem = UIBarButtonItem.init(title: "Close", style: .done, target: self, action: #selector(close))
    navigationItem.rightBarButtonItem = UIBarButtonItem.init(title: "Create", style: .done, target: self, action: #selector(create))
    setupView()
  }
  
  // MARK: Do something
  
  @IBOutlet var inputTextView: UITextView!
...
