...
                                        <subviews>
                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6nL-ZZ-Khy">
                                                <rect key="frame" x="0.0" y="0.0" width="122" height="122"/>
                                            </imageView>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cB6-sz-Eay">
                                                <rect key="frame" x="0.0" y="0.0" width="122" height="122"/>
                                                <state key="normal" image="plus" catalog="system">
                                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="40" scale="default"/>
                                                </state>
                                                <connections>
                                                    <action selector="action1:" destination="ZCK-0T-pJe" eventType="touchUpInside" id="YK8-26-zsU"/>
                                                </connections>
                                            </button>
...
